k8s/bkp_yml/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: osint-scraper-route
  namespace: osint
spec:
  parentRefs:
    - name: osint-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: osint-scraper
          port: 8080
